tests/fsharp/typecheck/sigs/neg47.bsl

neg47.fs(18,9,18,26): typecheck error FS1221: DLLImport bindings must be static members in a class or function definitions in a module

neg47.fs(24,14,24,31): typecheck error FS1221: DLLImport bindings must be static members in a class or function definitions in a module

neg47.fs(29,18,29,24): typecheck error FS1221: DLLImport bindings must be static members in a class or function definitions in a module

neg47.fs(33,14,33,25): typecheck error FS1221: DLLImport bindings must be static members in a class or function definitions in a module
